...

  // Alamat Default Kosong (Wajib pilih)
  String _deliveryAddress = "";

  final Map<String, IconData> _paymentIcons = {
    'Cash Money': Icons.money,
    'Gopay': Icons.phone_android,
    'Credit Card': Icons.credit_card,
  };

  late int _subtotal;
  late int _deliveryFee;
  late int _total;
...
    );
  }

  Widget _buildDeliveryLocationContent(BuildContext context) {
    final String noteButtonLabel = _deliveryNote.isNotEmpty
        ? 'edit catatan'
        : 'Catatan';

    bool isAddressEmpty = _deliveryAddress.isEmpty;

    return Column(
      crossAxisAlignment: CrossAxisAlignment.start,
      children: [
...
      child: Row(
        children: [
          Icon(currentIcon, color: Colors.green),
          const SizedBox(width: 12),
          const Expanded(
            child: Text(
              'Payment Method',
              style: TextStyle(fontSize: 16, fontWeight: FontWeight.w500),
            ),
          ),
          Text(
            _currentPaymentMethod,
            style: const TextStyle(
...
                  : const Color(0xFF1E9C3C),
              shape: RoundedRectangleBorder(
                borderRadius: BorderRadius.circular(8),
              ),
            ),
            child: const Text(
              'Place delivery order',
              style: TextStyle(
                fontSize: 16,
                fontWeight: FontWeight.bold,
                color: Colors.white,
              ),
            ),
...
